--- a/p/test/index.html
+++ b/p/test/index.html
@@ -318,7 +318,7 @@
     const gitalk = new Gitalk({
         clientID: "84c4739db08ccd6acffc",
         clientSecret: "350ffaf1770da09921769c4ef34f32f06c779c91",
-        repo: "Pang3220\/BlogTalks",
+        repo: "Pang3220\/GitalkBlog",
         owner: "Pang3220",
         admin: ["[Pang3220]"],
         distractionFreeMode: false, 
