--- a/p/test/index.html
+++ b/p/test/index.html
@@ -316,11 +316,11 @@
 <script src="https://cdn.jsdelivr.net/npm/blueimp-md5@2.18.0/js/md5.min.js"></script>
 <script>
     const gitalk = new Gitalk({
-        clientID: "84c4739db08ccd6acffc",
-        clientSecret: "350ffaf1770da09921769c4ef34f32f06c779c91",
-        repo: "Pang3220\/GitalkBlog",
+        clientID: "0b28e83dbd76cda3ef64",
+        clientSecret: "6729a6bd62062dd6fcfe39c1801e0b359896591a",
+        repo: "Pang3220.github.io",
         owner: "Pang3220",
-        admin: ["[Pang3220]"],
+        admin: ["Pang3220"],
         distractionFreeMode: false, 
         id: md5(location.pathname), 
     });
