--- a/关于/index.html
+++ b/关于/index.html
@@ -292,7 +292,7 @@
     const gitalk = new Gitalk({
         clientID: "0b28e83dbd76cda3ef64",
         clientSecret: "6729a6bd62062dd6fcfe39c1801e0b359896591a",
-        repo: "Pang3220\/Gitalk",
+        repo: "Gitalk",
         owner: "Pang3220",
         admin: ["Pang3220"],
         distractionFreeMode: false, 
