--- a/p/test/index.html
+++ b/p/test/index.html
@@ -322,7 +322,7 @@
                 props: {
                     title: "Test",
                     options: {
-                        autoCreateIssue:  false ,
+                        autoCreateIssue:  true ,
                         owner: "Pang3220",
                         repo: "Pang3220\/BlogTalks",
                         clientId: "3d60dd6c4decd41196bd",
