--- a/关于/index.html
+++ b/关于/index.html
@@ -296,7 +296,7 @@
                 props: {
                     title: "关于",
                     options: {
-                        autoCreateIssue:  false ,
+                        autoCreateIssue:  true ,
                         owner: "Pang3220",
                         repo: "Pang3220\/BlogTalks",
                         clientId: "3d60dd6c4decd41196bd",
