--- a/p/test/index.html
+++ b/p/test/index.html
@@ -312,7 +312,7 @@
 <div id="vssue"></div>
 
 <script src="https://unpkg.com/vue@2/dist/vue.runtime.min.js"></script>
-<script src="https://unpkg.com/vssue/dist/vssue.github.min.js"></script>
+<script src="https://unpkg.com/vssue/dist/vssue.gitee.min.js"></script>
 
 <script>
     new Vue({
@@ -325,8 +325,8 @@
                         autoCreateIssue:  true ,
                         owner: "Pang3220",
                         repo: "Pang3220\/BlogTalks",
-                        clientId: "3d60dd6c4decd41196bd",
-                        clientSecret: "3f3e58c5796869185565c1bc09240eb0616ce28b",
+                        clientId: "2250d9f1f86c8603b98d50e30878128e7fc61b31827c4a2e47c1548199520df4",
+                        clientSecret: "2cf840a662d4e68021faa9dee0a5d8099e70c466294aed45855b0fa64c12524d",
                     },
                 },
             }),
