--- a/search/index.html
+++ b/search/index.html
@@ -12,7 +12,18 @@
 <meta property='og:site_name' content='Pang小站'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="搜索">
-<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://Pang3220.github.io/search/index.json"><link rel="preload" href="https://Pang3220.github.io/search/index.json" as="fetch" crossorigin="anonymous">
+<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://Pang3220.github.io/search/index.json"><script>
+    (function(){
+        if(''){
+            if (prompt('机密博客，请输入密码！') !== ''){
+                alert('密码错误！！');
+                history.back();
+            }
+        }
+    })();
+</script>
+
+<link rel="preload" href="https://Pang3220.github.io/search/index.json" as="fetch" crossorigin="anonymous">
     </head>
     <body class="template-search">
     <script>
