--- a/关于/index.html
+++ b/关于/index.html
@@ -15,7 +15,18 @@
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="关于">
 <meta name="twitter:description" content="大家好,我是Pang
-个人简介 出生地：河北 性别：男 年龄：20岁 个人经历 2021年就读于哈尔滨工业大学 ">
+个人简介 出生地：河北 性别：男 年龄：20岁 个人经历 2021年就读于哈尔滨工业大学 "><script>
+    (function(){
+        if(''){
+            if (prompt('机密博客，请输入密码！') !== ''){
+                alert('密码错误！！');
+                history.back();
+            }
+        }
+    })();
+</script>
+
+
     </head>
     <body class="
     article-page
