--- a/p/test/index.html
+++ b/p/test/index.html
@@ -329,9 +329,9 @@
     const gitalk = new Gitalk({
         clientID: "5484d952281a529b6f0c",
         clientSecret: "7ff8eed01e9bee31e714caa1d3e6fed5076a3955",
-        repo: "BlogTalks",
+        repo: "Gitalks",
         owner: "Pang3220",
-        admin: ["[Pang3220]"],
+        admin: ["Pang3220"],
         distractionFreeMode: false, 
         id: md5(location.pathname), 
     });
