--- a/p/test/index.html
+++ b/p/test/index.html
@@ -321,7 +321,7 @@
     <div id="gitalk-container"></div>
 <link
     rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css"
+    href="https://cdn.jsdelivr.net/npm/gitalk@1.7.2/dist/gitalk.css"
 />
 <script src="https://cdn.jsdelivr.net/npm/gitalk@1.7.2/dist/gitalk.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/blueimp-md5@2.18.0/js/md5.min.js"></script>
@@ -333,7 +333,7 @@
         owner: "Pang3220",
         admin: ["Pang3220"],
         distractionFreeMode: false, 
-        id: location.href, 
+        id: location.pathname, 
     });
     (function () {
         if (
