--- a/p/test/index.html
+++ b/p/test/index.html
@@ -333,7 +333,7 @@
         owner: "Pang3220",
         admin: ["Pang3220"],
         distractionFreeMode: false, 
-        id: location.pathname, 
+        id: md5(location.pathname), 
     });
     (function () {
         if (
