--- a/关于/index.html
+++ b/关于/index.html
@@ -307,7 +307,7 @@
         owner: "Pang3220",
         admin: ["Pang3220"],
         distractionFreeMode: false, 
-        id: location.pathname, 
+        id: md5(location.pathname), 
     });
     (function () {
         if (
