--- a/p/test/index.html
+++ b/p/test/index.html
@@ -331,7 +331,7 @@
         clientSecret: "7ff8eed01e9bee31e714caa1d3e6fed5076a3955",
         repo: "Gitalks",
         owner: "Pang3220",
-        admin: ["Pang3220"],
+        admin: ["[Pang3220]"],
         distractionFreeMode: false, 
         id: md5(location.pathname), 
     });
